// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LogCell
    field={
      Field {
        "name": "_path",
        "type": "string",
        "value": "weird",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className=" _path weird-bg-color"
        >
          weird
        </span>,
        false,
        false,
        false,
      ],
      "className": "log-cell string",
      "onClick": [Function],
      "onContextMenu": [Function],
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "weird",
          "className": " _path weird-bg-color",
        },
        "ref": null,
        "rendered": "weird",
        "type": "span",
      },
      false,
      false,
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className=" _path weird-bg-color"
          >
            weird
          </span>,
          false,
          false,
          false,
        ],
        "className": "log-cell string",
        "onClick": [Function],
        "onContextMenu": [Function],
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "weird",
            "className": " _path weird-bg-color",
          },
          "ref": null,
          "rendered": "weird",
          "type": "span",
        },
        false,
        false,
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`shapshot after clicking 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LogCell
    field={
      Field {
        "name": "_path",
        "type": "string",
        "value": "weird",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className=" _path weird-bg-color"
        >
          weird
        </span>,
        false,
        false,
        false,
      ],
      "className": "log-cell string",
      "onClick": [Function],
      "onContextMenu": [Function],
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "weird",
          "className": " _path weird-bg-color",
        },
        "ref": null,
        "rendered": "weird",
        "type": "span",
      },
      false,
      false,
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className=" _path weird-bg-color"
          >
            weird
          </span>,
          false,
          false,
          false,
        ],
        "className": "log-cell string",
        "onClick": [Function],
        "onContextMenu": [Function],
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "weird",
            "className": " _path weird-bg-color",
          },
          "ref": null,
          "rendered": "weird",
          "type": "span",
        },
        false,
        false,
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`shapshot after hovering 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LogCell
    field={
      Field {
        "name": "_path",
        "type": "string",
        "value": "weird",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className=" _path weird-bg-color"
        >
          weird
        </span>,
        <button
          className="cell-options-button"
        >
          <DownArrow
            data-container-transform="translate(0 1)"
            data-icon="chevron-bottom"
            height="32"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>,
        <Tooltip
          style={
            Object {
              "left": 100,
              "top": 79,
            }
          }
        >
          <span
            className="field-name"
          >
            _path
          </span>
        </Tooltip>,
        false,
      ],
      "className": "log-cell string hover",
      "onClick": [Function],
      "onContextMenu": [Function],
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "weird",
          "className": " _path weird-bg-color",
        },
        "ref": null,
        "rendered": "weird",
        "type": "span",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <DownArrow
            data-container-transform="translate(0 1)"
            data-icon="chevron-bottom"
            height="32"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          />,
          "className": "cell-options-button",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "data-container-transform": "translate(0 1)",
            "data-icon": "chevron-bottom",
            "height": "32",
            "viewBox": "0 0 32 32",
            "width": "32",
            "xmlns": "http://www.w3.org/2000/svg",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <span
            className="field-name"
          >
            _path
          </span>,
          "style": Object {
            "left": 100,
            "top": 79,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "_path",
            "className": "field-name",
          },
          "ref": null,
          "rendered": "_path",
          "type": "span",
        },
        "type": [Function],
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className=" _path weird-bg-color"
          >
            weird
          </span>,
          <button
            className="cell-options-button"
          >
            <DownArrow
              data-container-transform="translate(0 1)"
              data-icon="chevron-bottom"
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            />
          </button>,
          <Tooltip
            style={
              Object {
                "left": 100,
                "top": 79,
              }
            }
          >
            <span
              className="field-name"
            >
              _path
            </span>
          </Tooltip>,
          false,
        ],
        "className": "log-cell string hover",
        "onClick": [Function],
        "onContextMenu": [Function],
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "weird",
            "className": " _path weird-bg-color",
          },
          "ref": null,
          "rendered": "weird",
          "type": "span",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <DownArrow
              data-container-transform="translate(0 1)"
              data-icon="chevron-bottom"
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            />,
            "className": "cell-options-button",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "data-container-transform": "translate(0 1)",
              "data-icon": "chevron-bottom",
              "height": "32",
              "viewBox": "0 0 32 32",
              "width": "32",
              "xmlns": "http://www.w3.org/2000/svg",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <span
              className="field-name"
            >
              _path
            </span>,
            "style": Object {
              "left": 100,
              "top": 79,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "_path",
              "className": "field-name",
            },
            "ref": null,
            "rendered": "_path",
            "type": "span",
          },
          "type": [Function],
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`shapshot after hovering 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LogCell
    field={
      Field {
        "name": "_path",
        "type": "string",
        "value": "weird",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className=" _path weird-bg-color"
        >
          weird
        </span>,
        false,
        false,
        false,
      ],
      "className": "log-cell string",
      "onClick": [Function],
      "onContextMenu": [Function],
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "weird",
          "className": " _path weird-bg-color",
        },
        "ref": null,
        "rendered": "weird",
        "type": "span",
      },
      false,
      false,
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className=" _path weird-bg-color"
          >
            weird
          </span>,
          false,
          false,
          false,
        ],
        "className": "log-cell string",
        "onClick": [Function],
        "onContextMenu": [Function],
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "weird",
            "className": " _path weird-bg-color",
          },
          "ref": null,
          "rendered": "weird",
          "type": "span",
        },
        false,
        false,
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`shapshot after right-clicking 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LogCell
    field={
      Field {
        "name": "_path",
        "type": "string",
        "value": "weird",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className=" _path weird-bg-color"
        >
          weird
        </span>,
        <button
          className="cell-options-button"
        >
          <DownArrow
            data-container-transform="translate(0 1)"
            data-icon="chevron-bottom"
            height="32"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>,
        <Tooltip
          style={
            Object {
              "left": 0,
              "top": 0,
            }
          }
        >
          <span
            className="field-name"
          >
            _path
          </span>
        </Tooltip>,
        <Connect(LogCellActions)
          field={
            Field {
              "name": "_path",
              "type": "string",
              "value": "weird",
            }
          }
          onClose={[Function]}
          style={
            Object {
              "left": undefined,
              "top": undefined,
            }
          }
        />,
      ],
      "className": "log-cell string active hover",
      "onClick": [Function],
      "onContextMenu": [Function],
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "weird",
          "className": " _path weird-bg-color",
        },
        "ref": null,
        "rendered": "weird",
        "type": "span",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <DownArrow
            data-container-transform="translate(0 1)"
            data-icon="chevron-bottom"
            height="32"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          />,
          "className": "cell-options-button",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "data-container-transform": "translate(0 1)",
            "data-icon": "chevron-bottom",
            "height": "32",
            "viewBox": "0 0 32 32",
            "width": "32",
            "xmlns": "http://www.w3.org/2000/svg",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <span
            className="field-name"
          >
            _path
          </span>,
          "style": Object {
            "left": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "_path",
            "className": "field-name",
          },
          "ref": null,
          "rendered": "_path",
          "type": "span",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "field": Field {
            "name": "_path",
            "type": "string",
            "value": "weird",
          },
          "log": undefined,
          "onClose": [Function],
          "style": Object {
            "left": undefined,
            "top": undefined,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className=" _path weird-bg-color"
          >
            weird
          </span>,
          <button
            className="cell-options-button"
          >
            <DownArrow
              data-container-transform="translate(0 1)"
              data-icon="chevron-bottom"
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            />
          </button>,
          <Tooltip
            style={
              Object {
                "left": 0,
                "top": 0,
              }
            }
          >
            <span
              className="field-name"
            >
              _path
            </span>
          </Tooltip>,
          <Connect(LogCellActions)
            field={
              Field {
                "name": "_path",
                "type": "string",
                "value": "weird",
              }
            }
            onClose={[Function]}
            style={
              Object {
                "left": undefined,
                "top": undefined,
              }
            }
          />,
        ],
        "className": "log-cell string active hover",
        "onClick": [Function],
        "onContextMenu": [Function],
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "weird",
            "className": " _path weird-bg-color",
          },
          "ref": null,
          "rendered": "weird",
          "type": "span",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <DownArrow
              data-container-transform="translate(0 1)"
              data-icon="chevron-bottom"
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            />,
            "className": "cell-options-button",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "data-container-transform": "translate(0 1)",
              "data-icon": "chevron-bottom",
              "height": "32",
              "viewBox": "0 0 32 32",
              "width": "32",
              "xmlns": "http://www.w3.org/2000/svg",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <span
              className="field-name"
            >
              _path
            </span>,
            "style": Object {
              "left": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "_path",
              "className": "field-name",
            },
            "ref": null,
            "rendered": "_path",
            "type": "span",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "field": Field {
              "name": "_path",
              "type": "string",
              "value": "weird",
            },
            "log": undefined,
            "onClose": [Function],
            "style": Object {
              "left": undefined,
              "top": undefined,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
